--- a/exercises/15-Network_Analysis.Rmd
+++ b/exercises/15-Network_Analysis.Rmd
@@ -939,9 +939,51 @@ edge_list %>%
   facet_grid(rows=vars(module1), cols = vars(module2))
 ```
 
+What is the correct power for this analysis?
+
+### Find ideal power
+```{r}
+# Choose a set of soft-thresholding powers
+powers = c(c(1:10), seq(from = 12, to = 20, by = 2))
+
+# Call the network topology analysis function
+sft = pickSoftThreshold(
+  input_mat,             # <= Input data
+  #blockSize = 30,
+  powerVector = powers,
+  verbose = 5
+  )
+
+par(mfrow = c(1,2));
+cex1 = 0.9;
+
+plot(sft$fitIndices[, 1],
+     -sign(sft$fitIndices[, 3]) * sft$fitIndices[, 2],
+     xlab = "Soft Threshold (power)",
+     ylab = "Scale Free Topology Model Fit, signed R^2",
+     main = paste("Scale independence")
+)
+text(sft$fitIndices[, 1],
+     -sign(sft$fitIndices[, 3]) * sft$fitIndices[, 2],
+     labels = powers, cex = cex1, col = "red"
+)
+abline(h = 0.90, col = "red")
+plot(sft$fitIndices[, 1],
+     sft$fitIndices[, 5],
+     xlab = "Soft Threshold (power)",
+     ylab = "Mean Connectivity",
+     type = "n",
+     main = paste("Mean connectivity")
+)
+text(sft$fitIndices[, 1],
+     sft$fitIndices[, 5],
+     labels = powers,
+     cex = cex1, col = "red")
+```
+It looksl ike power=7 or 8 is best. Let's try with 7.
 
 ```{r fig.height=12, fig.width=12}
-adjacency = adjacency(input_mat, power=12, type="signed")
+adjacency = adjacency(input_mat, power=7, type="signed")
 adjacency[adjacency < 0] = 0
 adjacency[adjacency > 1] = 1
 TOM = TOMsimilarity(adjacency, TOMType="signed")
@@ -962,7 +1004,7 @@ adj[adj != 1] = 0
 network <- graph.adjacency(adj)
 network <- simplify(network)  # removes self-loops
 cor <- WGCNA::cor
-results <- WGCNA::blockwiseModules(input_mat, power=12, TOMType="signed", networkType="signed")
+results <- WGCNA::blockwiseModules(input_mat, power=7, TOMType="signed", networkType="signed")
 cor <- stats::cor
 V(network)$color <- results$colors
 par(mar=c(0,0,0,0))
@@ -971,11 +1013,14 @@ network <- delete.vertices(network, degree(network)==0)
 # plot(network, layout=layout.fruchterman.reingold(network, niter=10000),type="o")
 # plot(network, layout=layout_with_mds(network), edge.arrow.size = 0.1)
 plot(network, layout=layout.fruchterman.reingold(network, niter=1000),
-     vertex.size=3,edge.arrow.size=0.1, vertex.label.cex = 0.05,  vertex.label.color= "black", rescale=TRUE, ylim=c(-1,1),xlim=c(-1,1))
+     vertex.size=3,edge.arrow.size=0.1, 
+     vertex.label.cex = 0.01,  # increase this value to see gene names
+     vertex.label.color= "black", rescale=TRUE, ylim=c(-1,1),xlim=c(-1,1))
 ```
 
-```{r fig.height=12, fig.width=6}
-test_plot <- expr_normalized_DE %>%
+```{r fig.height=12, fig.width=8}
+(
+  test_plot <- expr_normalized_DE %>%
   data.frame() %>%
     mutate(
         gene_id = row.names(.)
@@ -988,13 +1033,13 @@ test_plot <- expr_normalized_DE %>%
   ggplot(., aes(x=name, y=value, group=gene_id)) +
   geom_line(aes(color = module),
             alpha = 0.2) +
-  theme_bw() +
+  theme_classic() +
   theme(
     axis.text.x = element_text(angle = 90)
   ) +
   facet_grid(rows = vars(module), 
              cols= vars(strain),
-             scales = "free_x"
+             scales = "free"
              ) +
   scale_x_discrete(position = "top") +
   labs(x = "treatment",
@@ -1002,9 +1047,7 @@ test_plot <- expr_normalized_DE %>%
   # use color variable as the color
   scale_color_identity() + 
   scale_y_log10()
-
-cowplot::ggdraw(test_plot)+
-   cowplot::draw_label("Airway Data", color = "Black", size = 14, x=0.1,y=0.97,hjust=0.65,fontface="bold")
+)
 
 ```
 
@@ -1035,7 +1078,7 @@ expr_normalized_DE %>%
   labs(x = "treatment",
        y = "normalized expression") +
   # use color variable as the color
-  scale_color_identity() + 
+  scale_color_identity() +
   scale_y_log10()
 ```
 
@@ -1052,20 +1095,6 @@ ID_network_list <- expr_normalized_DE %>%
     mutate(
         module = results$colors[gene_id]
     ) %>%
-  # data.frame() %>%
-  # tibble::rownames_to_column("ORF") %>%
-  # tidyr::pivot_longer(-ORF,names_to="Time", values_to = "DE_direction") %>%
-  # mutate(Time = readr::parse_number(Time),
-  #        DE_name = case_when(DE_direction == 1 ~ "up",
-  #                            DE_direction == -1 ~ "down",
-  #                            TRUE~NA),
-  #        # create grouping variable
-  #        group=paste0("DE_",DE_name,"_0",Time, "min")) %>%
-  # # modify names to pad leading 0's to fix time order
-  # mutate(group = str_replace(group,"_0120", "_120")) %>%
-  # mutate(group = str_replace(group,"_0240", "_240")) %>%
-  # mutate(entrezID=AnnotationDbi::select(org.Sc.sgd.db,keys=ORF,columns="ENTREZID",
-  #     multiVals = "first")$ENTREZID) %>%
   group_by(module) %>%
   # only get genes that are DE
   # filter(DE_direction != 0) %>%
@@ -1083,8 +1112,8 @@ GO_enrich_network_all <- clusterProfiler::compareCluster(
                                   ont           = "BP",
                                   OrgDb         = org.Sc.sgd.db,
                                   pAdjustMethod = "BH",
-                                  pvalueCutoff  = 0.05,
-                                  qvalueCutoff  = 0.05,
+                                  pvalueCutoff  = 0.5, 
+                                  qvalueCutoff  = 0.5,
                                   readable      = FALSE,
                                   fun           = 'enrichGO',
                                   keyType       = 'ORF'
@@ -1105,7 +1134,7 @@ GO_enrich_network_all %>%
 # GO_enrich_proteome_all %>%
   as.data.frame() %>% 
   group_by(Cluster) %>%
-  slice_min(order_by=p.adjust, n = 8) %>%
+  slice_min(order_by=pvalue, n = 5) %>%
   # separate_wider_delim(Cluster, delim = "_", names = c("junk","DE", "time")) %>%
   # mutate(Time = readr::parse_number(time)) %>%
   ggplot(.,
@@ -1117,16 +1146,43 @@ GO_enrich_network_all %>%
         guide = guide_colorbar(reverse = TRUE, order = 1)
       ) +
       scale_size_continuous(range = c(2, 12)) +
+      scale_x_discrete(position = "top") +
       scale_y_discrete(labels = function(x) str_wrap(x, width = 25)) +
-      xlab("Time (minutes)") +
+      xlab("Module") +
       ylab(NULL) +
-      ggtitle("Enriched GO Categories") +
+      ggtitle("Enriched GO Categories by Module") +
       # facet_wrap(~DE, scales = "free_y") +
       theme_bw() +
-      theme(text = element_text(size=14))
+      theme(text = element_text(size=14),
+            axis.text.x = element_text(angle = 90,hjust=0) )
 ```
 
 
+```{r fig.height=12, fig.width=8}
+# here are the data to add to cowplot:
+GO_summaries <- GO_enrich_network_all %>%
+  as.data.frame() %>% 
+  group_by(Cluster) %>%
+  slice_min(order_by=p.adjust, n = 4) %>%
+  slice_head(n = 4) %>%
+  mutate(Description = case_when(
+    p.adjust < 0.05 ~ paste0(Description," (",Count,")"),
+    TRUE ~ " "
+  )) %>%
+  summarize(description = str_c(Description, collapse = "\n")) %>%
+  pull(description)
+
+
+# draw plot with GO terms
+cowplot::ggdraw(test_plot +
+                  theme(plot.margin = margin(t = 0.5, r = 5, b = 0.5, l = 0.1, unit = "cm"))) +
+  cowplot::draw_text(GO_summaries, 
+                     x = 0.76,  # Adjust this value for the desired horizontal position
+                     y = rev(seq(0.05, 0.82, length.out = length(GO_summaries))),  # Adjust this sequence for the desired vertical positions
+                     size = 6, 
+                     hjust = 0,  # Align to the left
+                     vjust = 0.5)
+```
 
 ## Questions
 
